// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|BaseButton With Action 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="Button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Click Me 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Async Action 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="Button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Load for 1 Second 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Custom Icon 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button outline js-button"
      data-cy="js-button"
      size="large"
      title="Button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <div
        class="flex items-center base-icon m-1 js-"
      >
        <img
          alt=""
          class="ccu-icon cursor-pointer medium"
          src="IMAGE_MOCK"
          title=""
        />
         
      </div>
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Icon 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="Button"
      type="submit"
    >
      <!---->
       
      <svg
        aria-hidden="true"
        class="m-1 svg-inline--fa fa-file fa-w-12 fa-sm"
        data-icon="file"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm160-14.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
          fill="currentColor"
        />
      </svg>
       
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Sizes 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="small text-bodysm font-bodysm flex items-center justify-center base-button solid js-button"
          data-cy="js-button"
          size="small"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Small 
          <!---->
        </button>
      </div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="medium text-sans text-h4 font-h4 flex items-center justify-center base-button solid js-button"
          data-cy="js-button"
          size="medium"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Medium 
          <!---->
        </button>
      </div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
          data-cy="js-button"
          size="large"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Large 
          <!---->
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Text 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <button
      alt="button"
      class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
      data-cy="js-button"
      size="large"
      title="Button"
      type="submit"
    >
      <!---->
       
      <!---->
       
      <!---->
       Button 
      <!---->
    </button>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseButton With Variants 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="large text-h3 font-h3 flex items-center justify-center base-button solid js-button"
          data-cy="js-button"
          size="large"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Solid 
          <!---->
        </button>
      </div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="large text-h3 font-h3 flex items-center justify-center base-button outline js-button"
          data-cy="js-button"
          size="large"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Outline 
          <!---->
        </button>
      </div>
      <div
        class="m-4"
      >
        <button
          alt="button"
          class="large text-h3 font-h3 flex items-center justify-center base-button text js-button"
          data-cy="js-button"
          size="large"
          title="Button"
          type="submit"
        >
          <!---->
           
          <!---->
           
          <!---->
           Text 
          <!---->
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseCheckbox Disabled 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <label
      class="checkbox-container"
    >
      Disabled 
      <input
        class="checkmark-input"
        disabled="disabled"
        type="checkbox"
      />
       
      <span
        class="checkmark"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseCheckbox With Text 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <label
      class="checkbox-container"
    >
      Check Me 
      <input
        class="checkmark-input"
        type="checkbox"
      />
       
      <span
        class="checkmark"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseIcon All Icon Sizes 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex flex-wrap"
    >
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xxs"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          xxs
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xs"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          xs
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer small"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          sm
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer small"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          small
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer medium"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          md
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer medium"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          medium
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer large"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          lg
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer large"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          large
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center justify-end"
      >
        <div
          class="flex items-center base-icon m-6 js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          xl
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseIcon All Icons 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex flex-wrap"
    >
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          dashboard
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          cases
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          calendar
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          call
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          chat
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          print
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          pin
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          phone
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          share
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          download
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          active
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          edit
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          flag
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          filters
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          flag-filled
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          search
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          table
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          layers
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          info
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          trash
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          organization
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          history
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          cancel
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          help
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          up
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          down
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          updown
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          go-case
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-buffer
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-circle
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-poly
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-rect
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-sweep
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-undo
        </p>
      </div>
      <div
        class="flex flex-col border-2 text-center"
      >
        <div
          class="flex items-center base-icon m-8 align-self-center js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer xl"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
         
        <p>
          map-redo
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseIcon Simple Icon 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex items-center base-icon js-"
    >
      <img
        alt=""
        class="ccu-icon cursor-pointer large"
        src="IMAGE_MOCK"
        title=""
      />
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput Disabled 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large"
        data-cy=""
        disabled="disabled"
        pattern=".*"
        placeholder=""
        type="search"
      />
       
      <!---->
       
      <!---->
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput Disabled Break Glass 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large"
        data-cy=""
        disabled="disabled"
        pattern=".*"
        placeholder=""
        type="search"
      />
       
      <div
        class="icon-container flex items-center justify-center large"
      >
        <div
          class="flex items-center base-icon js-break-glass js-"
          data-cy="js-break-glass"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer small"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
      </div>
       
      <!---->
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput Simple 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large"
        data-cy=""
        pattern=".*"
        placeholder=""
        type="search"
      />
       
      <!---->
       
      <!---->
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput With Icon 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large has-icon"
        data-cy=""
        pattern=".*"
        placeholder=""
        type="search"
      />
       
      <!---->
       
      <div
        class="icon-container flex items-center justify-center large"
      >
        <div
          class="flex items-center base-icon js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer small"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput With Placeholder 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large"
        data-cy=""
        pattern=".*"
        placeholder="Some placeholder"
        type="search"
      />
       
      <!---->
       
      <!---->
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput With Sizes 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <div
          class="flex justify-start items-center"
        >
          <!---->
           
          <input
            autocomplete="off"
            class="flex-grow p-1 text-base"
            data-cy=""
            disabled="disabled"
            pattern=".*"
            placeholder=""
            type="search"
          />
           
          <!---->
           
          <!---->
           
        </div>
      </div>
      <div
        class="m-4"
      >
        <div
          class="flex justify-start items-center"
        >
          <!---->
           
          <input
            autocomplete="off"
            class="flex-grow p-1 text-base large"
            data-cy=""
            disabled="disabled"
            pattern=".*"
            placeholder=""
            type="search"
          />
           
          <!---->
           
          <!---->
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseInput With Tooltip 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="flex justify-start items-center"
    >
      <!---->
       
      <input
        autocomplete="off"
        class="flex-grow p-1 text-base large has-tooltip"
        data-cy=""
        pattern=".*"
        placeholder=""
        type="search"
      />
       
      <!---->
       
      <div
        class="icon-container flex items-center justify-center large has-tooltip"
        data-original-title="null"
      >
        <div
          class="flex items-center base-icon js-"
        >
          <img
            alt=""
            class="ccu-icon cursor-pointer small"
            src="IMAGE_MOCK"
            title=""
          />
           
        </div>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseLink As Anchor 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <a
      class="link"
      href="www.google.com"
      to=""
    >
      <p
        class="text-body font-body font-sans"
      >
        As Anchor
      </p>
    </a>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseLink As Router Link 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <a
      class="link router-link-exact-active router-link-active"
      href=""
    >
      <p
        class="text-body font-body font-sans"
      >
        As router-link
      </p>
    </a>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseLink With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <a
      class="link"
      href=""
      to=""
    >
      <p
        class="text-body font-body font-sans"
      >
        Link
      </p>
    </a>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseLink With Text Variant 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <a
      class="link"
      href=""
      to=""
    >
      <p
        class="text-h1 font-h1 font-sans"
      >
        H1 Link
      </p>
    </a>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseRadio With Basics 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <label
      class="z-50 flex items-center"
    >
      <input
        class=""
        name="My Radio"
        type="radio"
        value="radio1"
      />
       
      <span>
        
      My Radio
    
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseText With Custom Styles 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <p
      class="text-white bg-black text-h1 font-h1 font-sans"
    >
      Sample Text
    </p>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseText With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <p
      class="text-body font-body font-sans"
    >
      Sample Text
    </p>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseText With Font Weights 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
          style="font-weight: 300;"
        >
          Sample Text - (300)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
          style="font-weight: 400;"
        >
          Sample Text - (400)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
          style="font-weight: 500;"
        >
          Sample Text - (500)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
          style="font-weight: 600;"
        >
          Sample Text - (600)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
          style="font-weight: 700;"
        >
          Sample Text - (700)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseText With Fonts 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
        >
          Sample Text - (sans)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-display"
        >
          Sample Text - (display)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|BaseText With Variants 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <div
        class="m-4"
      >
        <p
          class="text-h1 font-h1 font-sans"
        >
          Sample Text - (h1)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h2 font-h2 font-sans"
        >
          Sample Text - (h2)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h3 font-h3 font-sans"
        >
          Sample Text - (h3)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-h4 font-h4 font-sans"
        >
          Sample Text - (h4)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-body font-body font-sans"
        >
          Sample Text - (body)
        </p>
      </div>
      <div
        class="m-4"
      >
        <p
          class="text-bodysm font-bodysm font-sans"
        >
          Sample Text - (bodysm)
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Modal Basic Modal 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <button
        alt="button"
        class="flex items-center justify-center base-button outline js-button"
        data-cy="js-button"
        title="Button"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <!---->
         Show Modal 
        <!---->
      </button>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Modal Modal With Custom Header And Footer 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div>
      <button
        alt="button"
        class="flex items-center justify-center base-button outline js-button"
        data-cy="js-button"
        title="Button"
        type="submit"
      >
        <!---->
         
        <!---->
         
        <!---->
         Show Modal 
        <!---->
      </button>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Badge With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="badge flex items-center justify-center rounded-full"
      style="width: 10px; height: 10px;"
    >
      <div>
        15
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Badge With Props 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="badge flex items-center justify-center rounded-full text-white bg-red-600"
      style="width: 33px; height: 33px;"
    >
      <div>
        25
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Spinner With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="loader loader--style3 flex flex-col items-center"
      title="2"
    >
      <svg
        height="40px"
        id="loader-1"
        style="enable-background: new 0 0 50 50;"
        version="1.1"
        viewBox="0 0 50 50"
        width="40px"
        x="0px"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0px"
      >
        <path
          d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
          fill="#000"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            dur="0.6s"
            from="0 25 25"
            repeatCount="indefinite"
            to="360 25 25"
            type="rotate"
          />
        </path>
      </svg>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Spinner With Dynamic Props 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="loader loader--style3 flex flex-col items-center"
      title="2"
    >
      <svg
        height="40px"
        id="loader-1"
        style="enable-background: new 0 0 50 50;"
        version="1.1"
        viewBox="0 0 50 50"
        width="40px"
        x="0px"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
        y="0px"
      >
        <path
          d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
          fill="#000"
        >
          <animatetransform
            attributeName="transform"
            attributeType="xml"
            dur="0.6s"
            from="0 25 25"
            repeatCount="indefinite"
            to="360 25 25"
            type="rotate"
          />
        </path>
      </svg>
       
      <span>
        Loading
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Tag Closeable Tag 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="tag flex items-center px-1 justify-center text-xs"
    >
      <div
        class="flex items-center base-icon mx-1 js-"
      >
        <img
          alt=""
          class="ccu-icon cursor-pointer xxs"
          src="IMAGE_MOCK"
          title=""
        />
         
      </div>
       Close me
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements|Tag Simple Tag 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="tag flex items-center px-1 justify-center text-xs"
    >
      <!---->
       Do something
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|HomeLayout With All 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="homegrid grid-container"
    >
      <div
        class="grid--overlay homegrid-backdrop"
      />
       
      <div
        class="grid--logo logo my-8"
      >
        <img
          alt="CrisisCleanup"
          src="@/assets/ccu-logo-black-500w.png"
        />
      </div>
       
      <div
        class="grid--survivors"
      >
        <div
          class="homegrid-survivors"
        >
          <p
            class="text-h1 font-h1 font-display"
          >
            homeVue.survivors_call
          </p>
           
          <p
            class="text-h2 font-h2 font-display"
          >
            1 (800) 451 1954
          </p>
        </div>
      </div>
       
      <div
        class="grid--nav border-2"
      >
        <h1>
          I am in grid--nav
        </h1>
      </div>
       
      <div
        class="grid--actions border-2"
      >
        <h1>
          I am in grid--actions
        </h1>
      </div>
       
      <div
        class="grid--main h-screen border-2"
      >
        <h1>
          I am in grid--main
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|HomeLayout With Basic Content 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="homegrid grid-container"
    >
       
      <div
        class="grid--logo logo my-8"
      >
        <img
          alt="CrisisCleanup"
          src="@/assets/ccu-logo-black-500w.png"
        />
      </div>
       
      <div
        class="grid--survivors"
      >
        <div
          class="homegrid-survivors"
        >
          <p
            class="text-h1 font-h1 font-display"
          >
            homeVue.survivors_call
          </p>
           
          <p
            class="text-h2 font-h2 font-display"
          >
            1 (800) 451 1954
          </p>
        </div>
      </div>
       
      <div
        class="grid--main h-screen"
      >
        <h1>
          I am in a HomeLayout
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|HomeLayout With Default Override 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="homegrid grid-container"
    >
       
      <div
        class="grid--logo border-2"
      >
        <p>
          This is grid--logo
        </p>
      </div>
       
      <div
        class="grid--survivors border-2"
      >
        <p>
          This is grid--survivors
        </p>
      </div>
       
      <div
        class="grid--main w-screen h-screen border-2"
      >
        <p>
          This is grid--main
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|HomeLayout With Overlay 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="homegrid grid-container"
    >
      <div
        class="grid--overlay homegrid-backdrop"
      />
       
      <div
        class="grid--logo logo my-8"
      >
        <img
          alt="CrisisCleanup"
          src="@/assets/ccu-logo-black-500w.png"
        />
      </div>
       
      <div
        class="grid--survivors"
      >
        <div
          class="homegrid-survivors"
        >
          <p
            class="text-h1 font-h1 font-display"
          >
            homeVue.survivors_call
          </p>
           
          <p
            class="text-h2 font-h2 font-display"
          >
            1 (800) 451 1954
          </p>
        </div>
      </div>
       
      <div
        class="grid--main h-screen"
      >
        <h1>
          Home Container!
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|Loader With Custom Spinner 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="relative"
    >
      <div
        class="absolute bottom-0 left-0 right-0 top-0 bg-crisiscleanup-light-grey opacity-75 flex items-center justify-center"
        data-cy="overlay.loader"
      >
        <div
          class="loader loader--style3 flex flex-col items-center"
          title="2"
        >
          <svg
            height="40px"
            id="loader-1"
            style="enable-background: new 0 0 50 50;"
            version="1.1"
            viewBox="0 0 50 50"
            width="40px"
            x="0px"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            y="0px"
          >
            <path
              d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
              fill="red"
            >
              <animatetransform
                attributeName="transform"
                attributeType="xml"
                dur="0.6s"
                from="0 25 25"
                repeatCount="indefinite"
                to="360 25 25"
                type="rotate"
              />
            </path>
          </svg>
           
          <span>
            Custom Loader
          </span>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|Loader With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="relative"
    >
      <div
        class="absolute bottom-0 left-0 right-0 top-0 bg-crisiscleanup-light-grey opacity-75 flex items-center justify-center"
        data-cy="overlay.loader"
      >
        <div
          class="loader loader--style3 flex flex-col items-center"
          title="2"
        >
          <svg
            height="40px"
            id="loader-1"
            style="enable-background: new 0 0 50 50;"
            version="1.1"
            viewBox="0 0 50 50"
            width="40px"
            x="0px"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            y="0px"
          >
            <path
              d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
              fill="#000"
            >
              <animatetransform
                attributeName="transform"
                attributeType="xml"
                dur="0.6s"
                from="0 25 25"
                repeatCount="indefinite"
                to="360 25 25"
                type="rotate"
              />
            </path>
          </svg>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Layouts|Loader With Layout 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="relative"
    >
      <div
        class="absolute bottom-0 left-0 right-0 top-0 bg-crisiscleanup-light-grey opacity-75 flex items-center justify-center"
        data-cy="overlay.loader"
      >
        <div
          class="loader loader--style3 flex flex-col items-center"
          title="2"
        >
          <svg
            height="40px"
            id="loader-1"
            style="enable-background: new 0 0 50 50;"
            version="1.1"
            viewBox="0 0 50 50"
            width="40px"
            x="0px"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
            y="0px"
          >
            <path
              d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z"
              fill="#000"
            >
              <animatetransform
                attributeName="transform"
                attributeType="xml"
                dur="0.6s"
                from="0 25 25"
                repeatCount="indefinite"
                to="360 25 25"
                type="rotate"
              />
            </path>
          </svg>
           
          <!---->
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages|NotFound With Defaults 1`] = `
<div
  style="position: fixed; top: 0px; left: 0px; bottom: 0px; right: 0px; display: flex; align-items: center; overflow: auto;"
>
  <div
    style="margin: auto; max-height: 100%;"
  >
    <div
      class="homegrid grid-container"
    >
       
      <div
        class="grid--logo logo my-8"
      >
        <img
          alt="CrisisCleanup"
          src="@/assets/ccu-logo-black-500w.png"
        />
      </div>
       
      <div
        class="grid--survivors"
      >
        <div
          class="homegrid-survivors"
        >
          <p
            class="text-h1 font-h1 font-display"
          >
            homeVue.survivors_call
          </p>
           
          <p
            class="text-h2 font-h2 font-display"
          >
            1 (800) 451 1954
          </p>
        </div>
      </div>
       
      <div
        class="grid--main h-screen"
      >
        <div
          class="cover-image"
        />
      </div>
    </div>
  </div>
</div>
`;
